- 
    Bug 
- 
    Resolution: Done
- 
    P0: Blocker 
- 
    5.15.0 Alpha
- 
    None
- 
        
- 
        ebfbea3fc0973e1b177b31803782d100a4057429 (qt/qttools/5.15)
agent:2020/01/23 08:37:46 build.go:220: In file included from codemarker.cpp:29:
agent:2020/01/23 08:37:46 build.go:220: In file included from ./codemarker.h:33:
agent:2020/01/23 08:37:46 build.go:220: ./sections.h:80:62: error: no member named 'insertMulti' in 'QMultiMap<QString, Node *>'
agent:2020/01/23 08:37:46 build.go:220:     void insert(const QString &key, Node *node) { memberMap_.insertMulti(key, node); }
agent:2020/01/23 08:37:46 build.go:220:                                                   ~~~~~~~~~~ ^
agent:2020/01/23 08:37:46 build.go:220: 1 error generated.
agent:2020/01/23 08:37:46 build.go:220: make[2]: *** [.obj/codemarker.o] Error 1
agent:2020/01/23 08:37:46 build.go:220: make[2]: *** Waiting for unfinished jobs....
agent:2020/01/23 08:37:46 build.go:220: cd lrelease/ && ( test -e Makefile || /Users/qt/work/install/bin/qmake -o Makefile /Users/qt/work/qt/qttools/src/linguist/lrelease/lrelease.pro INSTALL_PREFIX=/Users/qt/work/install ) && /Applications/Xcode10.app
Details: https://testresults.qt.io/coin/integration/qt/qt5/tasks/1579767511
Tested changes (refs/builds/qtci/5.15/1579767510):
  https://codereview.qt-project.org/c/qt/qt5/+/286791 Update submodules on '5.15' in qt/qt5
- relates to
- 
                    QTBUG-81607 moc_copy/moc.cpp:905:34: error: ‘class QMap<QByteArray, bool>’ has no member named ‘unite’ -         
- Closed
 
-         
- resulted from
- 
                    QTBUG-35544 Q{Hash,Map}::unite "should not" insert duplicate values (RFE) -         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-81610 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 287656,3 | qdoc: Fix deprecation warnings about QMultiMap/QMap | 5.15 | qt/qttools | Status: MERGED | +2 | 0 |