qdoc: Fix deprecation warnings about QMultiMap/QMap

Change all maps on which insertMulti() is used to be QMultiMaps
and replace insertMulti() by insert(), fixing:

sections.h:80:83: warning: 'QMap<K, V>::iterator QMap<K, V>::insertMulti(const Key&, const T&) [with Key = QString; T = Node*]' is deprecated: Use QMultiMap for maps storing multiple values with the same key. [-Wdeprecated-declarations]
node.cpp:1998:53: warning: 'QList<ValueType> QMap<K, V>::values(const Key&) const [with Key = QString; T = Node*]' is deprecated: Use QMultiMap for maps storing multiple values with the same key. [-Wdeprecated-declarations]
node.cpp:2027:54: warning: 'int QMap<K, V>::count(const Key&) const [with Key = QString; T = Node*]' is deprecated: Use QMultiMap for maps storing multiple values with the same key. [-Wdeprecated-declarations]
node.cpp:2062:49: warning: 'QList<ValueType> QMap<K, V>::values(const Key&) const [with Key = QString; T = Node*]' is deprecated: Use QMultiMap for maps storing multiple values with the same key. [-Wdeprecated-declarations]
node.cpp:2387:45: warning: 'QMap<K, V>::iterator QMap<K, V>::insertMulti(const Key&, const T&) [with Key = QString; T = Node*]' is deprecated: Use QMultiMap for maps storing multiple values with the same key. [-Wdeprecated-declarations]
node.cpp:2419:57: warning: 'QMap<K, V>::iterator QMap<K, V>::insertMulti(const Key&, const T&) [with Key = QString; T = Node*]' is deprecated: Use QMultiMap for maps storing multiple values with the same key. [-Wdeprecated-declarations]
node.cpp:2444:61: warning: 'QMap<K, V>::iterator QMap<K, V>::insertMulti(const Key&, const T&) [with Key = QString; T = Node*]' is deprecated: Use QMultiMap for maps storing multiple values with the same key. [-Wdeprecated-declarations]
node.cpp:2737:74: warning: 'QMap<K, V>::iterator QMap<K, V>::insertMulti(const Key&, const T&) [with Key = QString; T = Node*]' is deprecated: Use QMultiMap for maps storing multiple values with the same key. [-Wdeprecated-declarations]
sections.cpp:207:53: warning: 'QMap<K, V>::iterator QMap<K, V>::insertMulti(const Key&, const T&) [with Key = QString; T = Node*]' is deprecated: Use QMultiMap for maps storing multiple values with the same key. [-Wdeprecated-declarations]
sections.cpp:210:49: warning: 'QMap<K, V>::iterator QMap<K, V>::insertMulti(const Key&, const T&) [with Key = QString; T = Node*]' is deprecated: Use QMultiMap for maps storing multiple values with the same key. [-Wdeprecated-declarations]
sections.cpp:213:53: warning: 'QMap<K, V>::iterator QMap<K, V>::insertMulti(const Key&, const T&) [with Key = QString; T = Node*]' is deprecated: Use QMultiMap for maps storing multiple values with the same key. [-Wdeprecated-declarations]
qdocdatabase.cpp:1027:76: warning: 'QMap<K, V>::iterator QMap<K, V>::insertMulti(const Key&, const T&) [with Key = Text; T = const Node*]' is deprecated: Use QMultiMap for maps storing multiple values with the same key. [-Wdeprecated-declarations]

Fixes: QTBUG-81610
Change-Id: Id908435f4f93de1d5a90ba9568dbfbe07b2d6394
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
Reviewed-by: Paul Wicking <paul.wicking@qt.io>